--- a/blocks/contact-center/contact-center.css
+++ b/blocks/contact-center/contact-center.css
@@ -2,7 +2,6 @@ main .contact-center {
   background-color: white;
   padding: 20px 40px;
   text-align: center;
-  margin-bottom: 80px;
   font-size:20px;
 }
 
@@ -30,7 +29,7 @@ main .contact-center img {
 
 @media (min-width: 900px) {
   main .contact-center {
-    padding: 20px 20%;
+    padding: 55px 20% 74px 20%;
   }
 
   main .contact-center p:last-child {
