--- a/styles/styles.css
+++ b/styles/styles.css
@@ -545,7 +545,7 @@ main .background .default-content-wrapper {
 }
 
 main .carve-career-all-section .default-content-wrapper{
-margin:12px 0px;
+  margin:72px auto;
 }
 
 main .integration-free-solutions {
@@ -933,7 +933,7 @@ main .privacy-policy-section * h3 {
 main .tech-product-section h6 {
   text-align: center;
   font-family: var(--alt-font-family);
-  font-size: 24px;
+  font-size: 20px;
 }
 
 main .support-services h6 {
@@ -1206,7 +1206,7 @@ main .form {
   }
 
   main .background .default-content-wrapper h4 {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 300;
     text-align: center;
     padding-left: 0;
@@ -1233,8 +1233,27 @@ main .form {
     color:#000;
     margin-top:20px;
   }
- 
+  main .tech-product-section .default-content-wrapper h2 {
+    font-size: 36px;
+    padding-top: 0;
+    display: flex;
+    justify-content: center;
+    font-weight: 100;
+    color:#000;
+    margin-top:-15px;
+  }
 
+  main .our-resources-product .default-content-wrapper h2 {
+    font-size: 36px;
+    padding-top: 0;
+    display: flex;
+    justify-content: center;
+    font-weight: 100;
+    color:#000;
+    margin:-15px;
+    margin-bottom: 40px;
+  }
+  
   main .our-capabilities .default-content-wrapper h2 {
     font-size: 36px;
     padding-top: 0;
@@ -1305,7 +1324,28 @@ main .form {
     font-size: 15px;
     font-weight: 200;
     text-align: left;
-    margin: 50px 0px 47px 0px;
+    margin: 58px 0px 90px 0px;
+  }
+
+  main .why-us .default-content-wrapper h5 {
+    font-size: 15px;
+    font-weight: 200;
+    text-align: left;
+    margin: 58px 0px 47px 0px;
+  }
+
+  main .carve-career-all-section .default-content-wrapper h5 {
+    font-size: 15px;
+    font-weight: 200;
+    text-align: left;
+    margin: 58px 0px 0px 0px;
+  }
+
+  main .history-vision-section .default-content-wrapper h5 {
+    font-size: 15px;
+    font-weight: 200;
+    text-align: left;
+    margin: 58px 0px 85px 0px;
   }
 
   main .carve-career .default-content-wrapper h5 {
